# pythontest

./: pyproject.toml
src/mon_premier_projet/: main.py  module1.py  module2.py
src/mon_premier_projet/utilitaires/: convert.py  maths.py  texte.py
